# django-maps

./: LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  tsconfig.json
maps/: fields.py  forms.py  serializers.py  views.py  widgets.py
maps/static/css/: maplibre-gl-admin.css  maplibre-gl.css
maps/static/js/: mapbox-admin.js  mapbox-client-v2.js  mapbox-client-v2.ts  mapbox-client.js  maplibre-gl.js
maps/static/map_styles/: cartodb-xyz.json  os-styles.json
maps/static/sprites/: sprite.json  sprite.xcf  sprite@2x.json
maps/templates/: mapbox_headers.html  mapbox_insert_cluster.html  mapbox_simple_map_insert.html  mapbox_simple_map_insert_v2.html
maps/templates/admin/: field_widget_location.html
maps/templates/headers/: admin-headers.html  client-headers.html
maps/templates/includes/: layers-clusters.json  layers.json  sources.json
maps/templates/map_styles/: cartodb-xyz.json  os-road.json  os-styles-clusters.json  os-styles-vector.json  os-styles.json  os-vts-proxy.json  os-vts.json  os-zoomstack-light.json  os-zoomstack-night.json  os-zoomstack-outdoors.json  os-zoomstack-road-clusters.json  os-zoomstack-road.json  osm-basic.json  osm-liberty.json  osm-positron.json  osm-v1.json
maps/templatetags/: maps.py
